@@ -43,10 +43,10 @@ public class DefaultPublishedProgramService implements PublishedProgramService {
     final long STATUS_CONFIRMED = 6L;
 
     @Override
-    public PublishedProgramResponseDto getList(List<LocalDate> dates, List<Long> statusIds, List<Long> programIds) {
-        LocalDate start = dates == null ? null : dates.get(0);
-        LocalDate end = dates == null ? null : dates.get(dates.size()-1);
-        List<PublishedProgram> publishedPrograms = publishedProgramRepository.findAll(start, end, statusIds, programIds);
+    public PublishedProgramResponseDto getList(List<Long> memberIds, List<LocalDate> dates, List<Long> statusIds, List<Long> programIds) {
+        LocalDate start = dates == null ? null : dates.getFirst();
+        LocalDate end = dates == null ? null : dates.getLast();
+        List<PublishedProgram> publishedPrograms = publishedProgramRepository.findAll(memberIds, start, end, statusIds, programIds);
 
         modelMapper.typeMap(PublishedProgram.class, PublishedProgramListDto.class)
                 .addMappings(mapper -> {
@@ -98,18 +98,15 @@ public class DefaultPublishedProgramService implements PublishedProgramService {
         }
 
         // 2. 이미 개설된 날짜.
-        List<Long> pIdsByHost = programRepository.findAll2(publishedProgramCreateDto.getRegMemberId(),
-                        null,
-                        List.of("Published"))
-                .stream()
-                .map(Program::getId)
-                .toList();
-        System.out.println(pIdsByHost);
-        List<PublishedProgram> activePublishedPrograms = publishedProgramRepository.findAll(firstAvailableDate, lastAvailableDate,
-                Arrays.asList(STATUS_ON_GOING, STATUS_URGENT, STATUS_CONFIRMED, STATUS_WAIT_CONFIRM), pIdsByHost);
-        List<LocalDate> unavailableDates = new ArrayList<>(activePublishedPrograms.stream().map(publishedProgram -> publishedProgram.getDate()).toList());
+        List<PublishedProgram> activePublishedPrograms = publishedProgramRepository.findAll(List.of(publishedProgramCreateDto.getRegMemberId()),
+                firstAvailableDate, lastAvailableDate,
+                Arrays.asList(STATUS_ON_GOING, STATUS_URGENT, STATUS_CONFIRMED, STATUS_WAIT_CONFIRM), null);
+
+        List<LocalDate> unavailableDates = new ArrayList<>(activePublishedPrograms.stream().map(PublishedProgram::getDate).toList());
         System.out.println(unavailableDates);
+
         unavailableDates.retainAll(publishedProgramCreateDto.getDates());
+
         if (!unavailableDates.isEmpty()) {
             System.out.println("프로그램 개설 실패: 해당 일자에 이미 개설된 프로그램이 존재합니다.");
             unavailableDates.forEach(System.out::println);
@@ -121,6 +118,7 @@ public class DefaultPublishedProgramService implements PublishedProgramService {
         // 개설할 프로그램 entity
         Program program = programRepository.findById(publishedProgramCreateDto.getProgramId())
                 .orElseThrow(() -> new EntityNotFoundException("Program not found with ID: " + publishedProgramCreateDto.getProgramId()));
+
         // 개설된 프로그램의 status 초기값
         final Long INITIAL_STATUS_ID = STATUS_ON_GOING;
         Status initialStatus = statusRepository.findById(INITIAL_STATUS_ID)
@@ -128,17 +126,17 @@ public class DefaultPublishedProgramService implements PublishedProgramService {
 
 
         // 개설할 프로그램 리스트 만들어서 saveAll(개설된 프로그램 리스트)
-        List<PublishedProgram> publishedPrograms = new ArrayList<>();
-        for (LocalDate date : publishedProgramCreateDto.getDates()) {
-            PublishedProgram publishedProgram = PublishedProgram.builder()
-                    .program(program)
-                    .date(date)
-                    .groupSizeCurrent(0) // 초기값 0
-                    .status(initialStatus)
-                    .build();
-            publishedPrograms.add(publishedProgram);
-        }
+        List<PublishedProgram> publishedPrograms = publishedProgramCreateDto.getDates().stream()
+                .map(date -> PublishedProgram.builder()
+                        .program(program)
+                        .date(date)
+                        .groupSizeCurrent(0) // 초기값 0
+                        .status(initialStatus)
+                        .build())
+                .toList();
+
         List<PublishedProgram> savedPublishedPrograms = publishedProgramRepository.saveAll(publishedPrograms);
+
         return PublishedProgramCreatedDto.builder()
                 .programId(program.getId())
                 .programTitle(program.getTitle())
@@ -212,36 +210,6 @@ public class DefaultPublishedProgramService implements PublishedProgramService {
 
         // 5. 저장된 publishedProgram을 다시 db에서 꺼내서 dto에 담아서 리턴
         PublishedProgram savedPublishedProgram = publishedProgramRepository.findById(publishedProgramUpdateDto.getId()).get();
-
-//        PublishedProgramUpdatedDto publishedProgramUpdatedDto = PublishedProgramUpdatedDto.builder()
-//                .id(savedPublishedProgram.getId())
-//                .programId(savedPublishedProgram.getProgram().getId())
-//                .groupSizeCurrent(savedPublishedProgram.getGroupSizeCurrent())
-//                .date(savedPublishedProgram.getDate())
-//                .statusId(newStatus.getId())
-//                .statusName(newStatus.getName())
-//                .bookingMemberIds(savedPublishedProgram.getReservations()
-//                        .stream()
-//                        .map(Reservation::getMember)
-//                        .map(Member::getId)
-//                        .toList())
-//                .build();
-//
-//        return publishedProgramUpdatedDto;
-
-//       savedPublishedProgram.getReservations().forEach(reservation -> {
-//           System.out.println(reservation.getMember().getName());
-//       });
-
-        // publishedProgram의 reservations -> publishedProgramUpdatedDto의 bookingMemberIds
-//        modelMapper.typeMap(PublishedProgram.class, PublishedProgramUpdatedDto.class)
-//                .addMappings(mapper -> {
-//                    mapper.map(src -> src.getReservations().stream()
-//                                    .map(reservation -> reservation.getMember().getId())
-//                                    .toList(),
-//                            PublishedProgramUpdatedDto::setBookingMemberIds);
-//                });
-//        return modelMapper.map(savedPublishedProgram, PublishedProgramUpdatedDto.class);
 
         // modelMapper에서 쓸 Converter. List<Reservation> reservations를 List<Long> memberIds로
         // 6. 커스텀 modelMapper 설정
